# fs

./: .ocamlformat  README.md  dune-project  fs.opam  test_fs.ml
dev-tools.locks/ocaml-lsp-server/: lock.dune  ocaml-lsp-server.pkg
dev-tools.locks/ocamlformat/: lock.dune
dune.lock/: dune-rpc.pkg  jsonrpc.pkg  lock.dune  lsp.pkg  ocaml-lsp-server.pkg  ocamlc-loc.pkg
examples/: backup.ml  config.json  config.ml  csv.ml  diff.ml  dir.ml  dune  main.ml
src/: dune  fs.ml  fs.mli
test/: dune  test_fs.ml  test_fs_dir.ml  test_fs_file.ml
